[tool.poetry]
name = "deimos-engine"
version = "0.1.0"
description = "A simple engine for demos"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chuckrubber/deimos-engine"
repository = "https://github.com/chuckrubber/deimos-engine"
authors = ["John <jmancoding@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
