[tool.poetry]
name = "deimos-engine"
version = "0.1.0"
description = "A simple engine for demos"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chuckrubber/deimos-engine"
repository = "https://github.com/chuckrubber/deimos-engine"
authors = ["John <jmancoding@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
deimos-engine = "deimos_engine.core:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
